[package]
name = "release-manager"
description = "A utility to manage releasing rust programs"
version = "0.1.2"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix@tamu.edu>"]
repository = "https://github.com/asonix/release-manager"
readme = "README.md"
keywords = ["release", "deploy"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
structopt = "0.1"
structopt-derive = "0.1.0"
toml = "0.4.5"
zip = "0.2.6"
walkdir = "2.0.1"
